--- a/resources/less/sections/cart.less
+++ b/resources/less/sections/cart.less
@@ -80,7 +80,7 @@
 				.product-list {
 					width: inherit;
 
-					@import "../snippets/cart.product.less";
+					@import "../snippets/cart.item.less";
 				}
 
 				.scrollbar {
