--- a/resources/less/templates/shop.product.less
+++ b/resources/less/templates/shop.product.less
@@ -189,6 +189,13 @@
 			@import "../snippets/shop.product.sizes.less";
 			@import "../snippets/shop.product.colors.less";
 			
+			.invalid-feedback {
+				text-align: center;
+				margin-top: 15px;
+				color: red;
+				font-weight: 400;
+				font-size: 1.25rem;
+			}
 			.buttons {
 				display: grid;
 				grid-template-columns: 1fr auto;
@@ -236,6 +243,7 @@
 					}
 				}
 			}
+
 			.note {
 				margin-top: 10px;
 
