--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -2,7 +2,7 @@
 @import "theme/reset.less";
 @import "theme/materialize.toast.less";
 @import "theme/slick.less";
-@import "theme/button.less";
+@import "theme/_buttons.less";
 @import "theme/_forms.less";
 @import "theme/breadcrumb.less";
 @import "theme/tip.less";
