--- a/resources/less/snippets/cart.item.less
+++ b/resources/less/snippets/cart.item.less
@@ -1,9 +1,10 @@
 .product-item {
 	display: grid;
-	grid-template-columns: 75px 1fr;
+	grid-template-columns: 100px 1fr;
 	grid-gap: 15px;
 	padding: 20px 0;
-
+	transition: all .4s ease-in-out;
+	//transition: all 40s ease-in-out;
 
 	.left {
 		.product-picture {
@@ -27,8 +28,8 @@
 			margin-top: 10px;
 		}
 		.qty-price-wrapper {
-			display: grid;
-			grid-template-columns: auto 1fr;
+			display: flex;
+			justify-content: space-between;
 			align-items: center;
 			margin-top: 10px;
 
@@ -85,6 +86,16 @@
 				&:after {
 					content: '\20BD';
 					color: fade(white, 60%);
+				}
+			}
+			.remove {
+				color: #a26b6b;
+				cursor: pointer;
+				text-decoration: underline;
+				letter-spacing: .03rem;
+
+				&:hover {
+					opacity: .8;
 				}
 			}
 		}
