--- a/resources/less/theme/_buttons.less
+++ b/resources/less/theme/_buttons.less
@@ -5,7 +5,7 @@
 	height: max-content;
 	justify-content: center;
 	align-items: center;
-	transition: all .15s ease-in-out;
+	transition: opacity .4s ease-in-out, background-color .15s ease-in-out;
 	cursor: pointer;
 	font-size: 1.0667rem;
 	background-color: #eeeff4;
@@ -24,5 +24,9 @@
 		svg {
 			fill: white;
 		}
+	}
+	&:not(.without-active):active {
+		transition: none;
+		opacity: .6;
 	}
 }
