Add legal.refund page

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -16,7 +16,9 @@
 
 
 @import "templates/home.less";
-@import "templates/shop.product.less";
+@import "templates/catalog.product.less";
+
+@import "templates/legal.refund.less";
 
 @import "templates/badbrowser.less";
 @import "templates/error.401.less";
