--- a/resources/less/sections/footer.less
+++ b/resources/less/sections/footer.less
@@ -29,10 +29,13 @@
 				}
 				.link-item {
 					margin-bottom: 5px;
-					cursor: pointer;
 
-					&:hover {
-						opacity: .6;
+					a {
+						color: white;
+
+						&:hover {
+							opacity: .6;
+						}
 					}
 				}
 				&:last-child {
