--- a/resources/less/templates/legal.refund.less
+++ b/resources/less/templates/legal.refund.less
@@ -2,6 +2,31 @@
 	margin-top: 50px;
 
 	& > .container {
-		
+		.sticky_nav {
+			position: fixed;
+			list-style: none;
+			counter-reset: loyalty;
+			width: 25%;
+			cursor: pointer;
+			padding: 15px 0 0;
+		}
+		.sticky_nav li {
+			margin: 20px 0;
+		}
+		.content {
+			position: absolute;
+			right: 10%;
+			width: 60%;
+			line-height: 1.5;
+		}
+		.sticky_nav li a {
+			color: #56b7fc;
+		}
+		h1 {
+			margin: 30px 0 0;
+		}
+		 h2 {
+			margin: 30px 15px 0;
+		 }
 	}
 }
