--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -2375,6 +2375,44 @@ svg {
 #template_legal_refund {
   margin-top: 50px;
 }
+#template_legal_refund > .container {
+  display: flex;
+}
+#template_legal_refund > .container .sticky_nav {
+  flex: 1;
+  list-style: none;
+  counter-reset: loyalty;
+  cursor: pointer;
+  padding: 15px 30px 0px 0;
+}
+#template_legal_refund > .container .sticky_nav ul {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10px;
+  margin-top: -50px;
+  padding-top: 70px;
+  padding-bottom: 15%;
+  font-size: 1.2rem;
+}
+#template_legal_refund > .container .sticky_nav ul li {
+  margin: 20px 0;
+}
+#template_legal_refund > .container .sticky_nav ul li a {
+  color: #56b7fc;
+}
+#template_legal_refund > .container > .content {
+  flex: 3;
+  line-height: 1.5;
+  padding-bottom: 5%;
+}
+#template_legal_refund > .container h1 {
+  margin: 30px 0 0;
+}
+#template_legal_refund > .container h2 {
+  margin: 30px 15px 0;
+  margin-top: -50px;
+  padding-top: 70px;
+}
 #template_badbrowser {
   background-color: black;
   height: 100vh;
