--- a/resources/less/templates/legal.refund.less
+++ b/resources/less/templates/legal.refund.less
@@ -2,31 +2,46 @@
 	margin-top: 50px;
 
 	& > .container {
+		display: flex;
+
 		.sticky_nav {
-			position: fixed;
-			list-style: none;
-			counter-reset: loyalty;
-			width: 25%;
-			cursor: pointer;
-			padding: 15px 0 0;
-		}
-		.sticky_nav li {
-			margin: 20px 0;
-		}
-		.content {
-			position: absolute;
-			right: 10%;
-			width: 60%;
-			line-height: 1.5;
-		}
-		.sticky_nav li a {
-			color: #56b7fc;
-		}
-		h1 {
-			margin: 30px 0 0;
-		}
-		 h2 {
-			margin: 30px 15px 0;
-		 }
+		flex: 1;
+		list-style: none;
+		counter-reset: loyalty;
+		cursor: pointer;
+		padding: 15px 30px 0px 0;
+		
+		ul {
+			position:sticky;
+			top:10px;
+			margin-top: -50px;
+			padding-top: 70px;
+			padding-bottom: 15%;
+			font-size: 1.2rem;
+			
+			li {
+				margin: 20px 0;
+
+				a {
+					color: #56b7fc;
+				}
+			}
+		} 
 	}
+	& > .content {
+		flex: 3;
+		line-height: 1.5;
+		padding-bottom: 5%;
+	}
+	
+	h1 {
+		margin: 30px 0 0;
+	}
+
+		h2 {
+		margin: 30px 15px 0;
+		margin-top: -50px;
+		padding-top: 70px;
+		}
+	} 	  
 }
