--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -590,10 +590,10 @@ svg {
   transition: transform 0.25s ease;
   transform: translateX(0);
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item:not(:last-child) {
+#section_header .desktop .bottom .left .link-list .link-item:not(:last-child) {
   margin-right: 15px;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item a {
+#section_header .desktop .bottom .left .link-list .link-item a {
   height: 50px;
   display: flex;
   align-items: center;
@@ -602,39 +602,40 @@ svg {
   color: black;
   padding: 0 5px;
   border-top: 2px solid transparent;
+  cursor: pointer;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item a:hover {
+#section_header .desktop .bottom .left .link-list .link-item a:hover {
   border-top: 2px solid #7122e3;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu {
+#section_header .desktop .bottom .left .link-list .link-item .submenu {
   position: absolute;
   display: none;
   background-color: white;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.07);
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu .submenu-item {
+#section_header .desktop .bottom .left .link-list .link-item .submenu .submenu-item {
   border-bottom: 1px solid #f0f0f0;
   min-width: 170px;
   position: relative;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu .submenu-item a {
+#section_header .desktop .bottom .left .link-list .link-item .submenu .submenu-item a {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   padding: 8px 14px;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu .submenu-item a:hover {
+#section_header .desktop .bottom .left .link-list .link-item .submenu .submenu-item a:hover {
   color: #7122e3;
   border-top: 2px solid transparent;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu .submenu-item:hover .submenu-2 {
+#section_header .desktop .bottom .left .link-list .link-item .submenu .submenu-item:hover .submenu-2 {
   display: block;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item .submenu .submenu-2 {
+#section_header .desktop .bottom .left .link-list .link-item .submenu .submenu-2 {
   left: 100%;
   top: 0;
 }
-#section_header .desktop .bottom .left .link-list .movable .link-item:hover .submenu:not(.submenu-2) {
+#section_header .desktop .bottom .left .link-list .link-item:hover .submenu:not(.submenu-2) {
   display: block;
 }
 #section_header .desktop .bottom .right {
@@ -2517,6 +2518,7 @@ svg {
 }
 #section_footer .desktop .top .column .link-item a {
   color: white;
+  cursor: pointer;
 }
 #section_footer .desktop .top .column .link-item a:hover {
   opacity: 0.6;
