--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -106,57 +106,57 @@
 					display: flex;
 					transition: transform 0.25s ease;
 					transform: translateX(0);
+				}
+				.link-item {
+					&:not(:last-child) {
+						margin-right: 15px;
+					}
+					a {
+						height: 50px;
+						display: flex;
+						align-items: center;
+						font-size: 1.1rem;
+						font-weight: 300;
+						color: black;
+						padding: 0 5px;
+						border-top: 2px solid transparent;
+						cursor: pointer;
 
-					.link-item {
-						&:not(:last-child) {
-							margin-right: 15px;
+						&:hover {
+							border-top: 2px solid #7122e3;
 						}
-						a {
-							height: 50px;
-							display: flex;
-							align-items: center;
-							font-size: 1.1rem;
-							font-weight: 300;
-							color: black;
-							padding: 0 5px;
-							border-top: 2px solid transparent;
+					}
+					.submenu {
+						position: absolute;
+						display: none;
+						background-color: white;
+						box-shadow: 0 10px 10px 0 fade(black, 7%);
 
-							&:hover {
-								border-top: 2px solid #7122e3;
-							}
-						}
-						.submenu {
-							position: absolute;
-							display: none;
-							background-color: white;
-							box-shadow: 0 10px 10px 0 fade(black, 7%);
+						.submenu-item {
+							border-bottom: 1px solid #f0f0f0;
+							min-width: 170px;
+							position: relative;
 
-							.submenu-item {
-								border-bottom: 1px solid #f0f0f0;
-								min-width: 170px;
-								position: relative;
+							a {
+								height: max-content;
+								padding: 8px 14px;
 
-								a {
-									height: max-content;
-									padding: 8px 14px;
-
-									&:hover {
-										color: #7122e3;
-										border-top: 2px solid transparent;
-									}
-								}
-								&:hover .submenu-2 {
-									display: block;
+								&:hover {
+									color: #7122e3;
+									border-top: 2px solid transparent;
 								}
 							}
-							.submenu-2 {
-								left: 100%;
-								top: 0;
+							&:hover .submenu-2 {
+								display: block;
 							}
 						}
-						&:hover .submenu:not(.submenu-2) {
-							display: block;
+						.submenu-2 {
+							left: 100%;
+							top: 0;
 						}
+					}
+					&:hover .submenu:not(.submenu-2) {
+						display: block;
 					}
 				}
 			}
