Add brands page

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -16,6 +16,7 @@
 
 
 @import "templates/home.less";
+@import "templates/brands.less";
 @import "templates/catalog.product.less";
 
 @import "templates/legal.refund.less";
