--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -1,13 +1,119 @@
 #section_welcome {
-	position: relative;
+
+
+	& > .container {
+		margin-top: 30px;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		max-width: 1300px;
+
+		& > .block {
+			width: 100%;
+			height: 85vh;
+			position: relative;
+
+			.image {
+				background-size: cover;
+				background-position: center;
+				background-repeat: no-repeat;
+				height: 100%;
+			}
+			.text-wrapper {
+				.absolutely-covered;
+				background-color: fade(black, 20%);
+				transition: background-color 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
+
+				.name, .links {
+					.absolutely-covered;
+					display: flex;
+					justify-content: center;
+					top: 50px;
+					bottom: 50px;
+				}
+				.name {
+					z-index: 3;
+					pointer-events: none;
+
+					.outer {
+						text-transform: uppercase;
+						
+						font-size: 3.5rem;
+						transform: translateY(50%);
+						transition: transform 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
+						letter-spacing: .1rem;
+
+						.inner {
+							transition: inherit;
+							transform: translateY(-50%);
+
+							a {
+								pointer-events: auto;
+								color: white;
+							}
+						}
+					}
+				}
+				.links {
+					z-index: 2;
+					align-items: center;
+
+					.link-list {
+						min-width: 300px;
+						opacity: 0;
+						transition: opacity .2s ease-in-out;
+
+						.link-item {
+							transform: translateX(-15px);
+							opacity: 0;
+							transition: opacity .2s ease-in-out, transform .25s ease-in-out;
+
+							&:not(:last-child) {
+								margin-bottom: 20px;
+							}
+							a {
+								color: white;
+								font-size: 2rem;
+
+								&:hover {
+									text-decoration: underline;
+								}
+							}
+						}
+					}
+				}
+			}
+
+			&:hover {
+				.text-wrapper {
+					background-color: fade(black, 75%);
+
+					.name .outer {
+						transform: translateY(0);
+
+						.inner {
+							transform: translateY(0);
+						}
+					}
+					.links .link-list {
+						opacity: 1;
+
+						.link-item {
+							opacity: 1;
+							transform: translateY(0);
+						}
+					}
+				}
+			}
+		}
+	}
+
+
+	/*position: relative;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	-o-user-select: none;
 	-webkit-user-select: none;
-
 	height: calc(100vh - 82px - 50px - 50px);
-	display: grid;
-	grid-template-columns: 1fr 1fr;
 	z-index: 0;
 
 	.welcome-link {
@@ -29,8 +135,6 @@
 				opacity: .3;
 				transition: all 0.8s ease;
 			}
-
-
 		}
 		&:hover .image {
 			transform: scale(1.03);
@@ -56,5 +160,5 @@
 				font-size: 1.5rem;
 			}
 		}
+		}*/
 	}
-}
