--- a/resources/less/sections/header.less
+++ b/resources/less/sections/header.less
@@ -1,7 +1,10 @@
+@header_height: 120.8px;
+
 #section_header {
 	background-color: white;
 	position: sticky;
-	top: -75.5px;
+	//top: -75.5px;
+	top: calc(50px - @header_height);
 	transition: transform .3s ease, top .3s ease;
 	z-index: 100;
 	border-bottom: 1px solid #f2f2f2;
@@ -18,7 +21,7 @@
 		}
 	}
 	&.searchIsOpen {
-		transform: translateY(-75.5px);
+		transform: translateY(calc(50px - @header_height));
 		top: 0;
 
 		.brand-logo {
