Developing collection page #1

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -18,6 +18,7 @@
 @import "templates/home.less";
 @import "templates/brands.less";
 @import "templates/catalog.product.less";
+@import "templates/catalog.collection.less";
 
 @import "templates/legal.refund.less";
 
