--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -29,6 +29,13 @@ main {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 10px;
+
+	&.large {
+		max-width: 1340px;
+	}
+	&.small {
+		
+	}
 }
 .section {
 	margin-top: 50px;
