--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -155,12 +155,13 @@
 			align-items: center;
 
 			.search {
-				background-color: transparent;
+				background-color: #f1f1f1;
 
 				svg {
 					width: 20px;
-					height: 20px;
+					height: 17px;
 					fill: #565759;
+					margin-right: 5px;
 				}
 			}
 			.btn {
