--- a/resources/less/templates/catalog.product.less
+++ b/resources/less/templates/catalog.product.less
@@ -164,7 +164,7 @@
 				}
 			}
 			
-			@import "../snippets/shop.product.pricing.less";
+			@import "../snippets/catalog.product.pricing.less";
 
 			.parameter-list {
 				margin-top: 20px;
@@ -186,8 +186,8 @@
 				}
 			}
 
-			@import "../snippets/shop.product.sizes.less";
-			@import "../snippets/shop.product.colors.less";
+			@import "../snippets/catalog.product.sizes.less";
+			@import "../snippets/catalog.product.colors.less";
 			
 			.invalid-feedback {
 				text-align: center;
@@ -340,6 +340,6 @@
 		}
 	}
 
-	@import "../snippets/shop.product.gallery.less";
-	@import "../snippets/shop.product.found-cheaper-modal.less";
+	@import "../snippets/catalog.product.gallery.less";
+	@import "../snippets/catalog.product.found-cheaper-modal.less";
 }
