--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -1,10 +1,12 @@
 #template_catalog_collection {
-	margin-top: 50px;
+	margin-top: 20px;
 
 	& > .header {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		border-bottom: 1px solid #d0d0d0;
+		padding: 11px 0;
 
 		.breadcrumb {
 			margin-top: 0;
@@ -34,7 +36,25 @@
 		}
 	}
 
-	& > .content {
+	.main-content {
+		display: grid;
+		grid-template-columns: 240px 1fr;
+		grid-gap: 15px;
+		margin-top: 20px;
 
+		.left-side {
+			border: 1px solid red;
+			position: relative;
+
+			@import "../snippets/catalog.collection.filters.less";
+		}
+		.products-grid {
+			display: grid;
+			grid-template-columns: repeat(4, 1fr);
+			grid-column-gap: 15px;
+			grid-row-gap: 25px;
+
+			@import "../snippets/catalog.collection.product.less";
+		}
 	}
 }
