Developing collection page #3

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -6,6 +6,7 @@
 @import "theme/_forms.less";
 @import "theme/breadcrumb.less";
 @import "theme/tip.less";
+@import "theme/checkbox.less";
 
 
 @import "sections/header.less";
