Add sticky component

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -6,12 +6,12 @@
 @import "theme/_forms.less";
 @import "theme/breadcrumb.less";
 @import "theme/tip.less";
-@import "theme/checkbox.less";
+@import "theme/_has-scroll.less";
 
 
 @import "sections/header.less";
 @import "sections/welcome.less";
-@import "sections/collections.less";
+// @import "sections/collections.less";
 @import "sections/search.less";
 @import "sections/cart.less";
 
