--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -5,7 +5,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border-bottom: 1px solid #d0d0d0;
+		border-bottom: 1px solid #e0e0e0;
 		padding: 11px 0;
 
 		.breadcrumb {
@@ -29,7 +29,7 @@
 				margin-left: 12px;
 
 				&.active {
-					background-color: black;
+					background-color: #5e6364;
 					color: white;
 				}
 			}
@@ -43,7 +43,6 @@
 		margin-top: 20px;
 
 		.left-side {
-			border: 1px solid red;
 			position: relative;
 
 			@import "../snippets/catalog.collection.filters.less";
