--- a/resources/less/theme/_forms.less
+++ b/resources/less/theme/_forms.less
@@ -44,6 +44,64 @@
 }
 
 
+
+.form-check {
+	user-select: none;
+
+	&:not(:last-child) {
+		margin-bottom: 8px;
+	}
+	.form-check-input {
+		&[type="checkbox"] {
+			display: none;
+
+			& + .form-check-label {
+				display: flex;
+				align-items: center;
+				width: max-content;
+				cursor: pointer;
+
+				.checkbox-body {
+					width: 19px;
+					height: 19px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					border-radius: 4px;
+					margin-right: 7px;
+					transition: all .1s ease-in-out;
+					background-color: #ececec;
+
+					svg {
+						transition: inherit;
+						opacity: 0;
+						fill: white;
+						width: 70%;
+						transform: scale(1.3);
+					}
+				}
+				&:hover {
+					.checkbox-body {
+						background-color: #dbdbdb;
+					}
+				}
+			}
+			&:checked + .form-check-label {
+				.checkbox-body {
+					background-color: #7122e3;
+
+					svg {
+						opacity: 1;
+						transform: scale(1);
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
 .field {
 	position: relative;
 
