--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -7,11 +7,12 @@
 @import "theme/breadcrumb.less";
 @import "theme/tip.less";
 @import "theme/_has-scroll.less";
+@import "theme/_nouislider.less";
 
 
 @import "sections/header.less";
 @import "sections/welcome.less";
-// @import "sections/collections.less";
+@import "sections/collections.less";
 @import "sections/search.less";
 @import "sections/cart.less";
 
