--- a/resources/less/theme/_has-scroll.less
+++ b/resources/less/theme/_has-scroll.less
@@ -2,7 +2,7 @@
 	max-height: inherit;
 	position: relative;
 
-	.has-scroll-outer {
+	.has-scroll-inner {
 		max-height: inherit;
 		overflow-y: auto;
 	}
