--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -5,11 +5,11 @@
 		margin-top: 30px;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
+		grid-gap: 30px;
 		max-width: 1300px;
 
 		& > .block {
 			width: 100%;
-			height: 85vh;
 			position: relative;
 
 			.image {
@@ -36,7 +36,6 @@
 
 					.outer {
 						text-transform: uppercase;
-						
 						font-size: 3.5rem;
 						transform: translateY(50%);
 						transition: transform 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
