Add price block in filters section

--- a/resources/less/snippets/catalog.collection.filters.less
+++ b/resources/less/snippets/catalog.collection.filters.less
@@ -57,6 +57,19 @@
 						}
 					}
 				}
+				.row {
+					margin-top: 20px;
+					display: grid;
+					grid-template-columns: 1fr auto 1fr;
+					grid-gap: 15px;
+					align-items: center;
+
+					.separator {
+						width: 15px;
+						height: 1px;
+						background-color: black;
+					}
+				}
 			}
 		}
 	}
