--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -1805,25 +1805,7 @@ svg {
   text-align: center;
   font-weight: bold;
 }
-#template_brands .container .brands-by-letter ul {
-  display: flex;
-  margin: 20px 0;
-  font-size: 1.4rem;
-}
-#template_brands .container .brands-by-letter ul li {
-  margin: 3px;
-  border: black;
-  background: #DCDCDC;
-  padding: 5px 10px;
-}
-#template_brands .container .brands-by-letter ul li a {
-  color: #808080;
-  font-weight: bold;
-}
-#template_brands .container .brands-by-letter ul li:hover {
-  background: #7122e3;
-}
-#template_brands .container .brands h1 {
+#template_brands .container .brands h2 {
   margin-top: -50px;
   margin-bottom: 15px;
   padding-top: 100px;
@@ -1834,6 +1816,31 @@ svg {
   font-weight: normal;
   font-size: 1.5rem;
 }
+#template_brands .container .brands-by-letter ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+#template_brands .container .brands-by-letter ul li {
+  margin: 3px;
+  background: #DCDCDC;
+}
+#template_brands .container .brands-by-letter ul li a {
+  display: block;
+  color: #808080;
+  font-weight: bold;
+  width: 35px;
+  height: 30px;
+  padding: 7px 13px;
+}
+#template_brands .container .brands-by-letter ul li:hover {
+  background: #7122e3;
+}
+#template_brands .container .brands-by-letter ul li:hover a {
+  color: #FFFFFF;
+}
 #template_brands .container .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
@@ -1842,22 +1849,35 @@ svg {
 #template_brands .container .grid div {
   display: flex;
   align-items: center;
-  margin: 10px;
+  margin: 10px 3px;
   font-size: 1.5rem;
 }
-#template_brands .container .grid div img {
-  height: auto;
-  width: 150px;
+#template_brands .container .grid div .image {
+  border: none;
+  text-align: center;
+  width: 200px;
+  height: 100px;
+  overflow: none;
   background: #C0C0C0;
+}
+#template_brands .container .grid div .image img {
   margin-right: 15px;
-  padding: 15px;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
 }
 #template_brands .container .grid div:hover {
   color: #000000;
   text-decoration: underline;
+  transition: all 0.15s ease-in-out;
 }
-#template_brands .container .grid div:hover img {
+#template_brands .container .grid div:hover .image {
   background: #7122e3;
+}
+#template_brands .container .grid div:hover .image img {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
 }
 #template_shop_product > .top {
   margin-top: 50px;
