--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -1,6 +1,4 @@
 #section_welcome {
-
-
 	& > .container {
 		margin-top: 30px;
 		display: grid;
@@ -8,9 +6,30 @@
 		grid-gap: 30px;
 		max-width: 1300px;
 
+
+		@media (max-width: 1160px) {
+			grid-gap: 10px;
+		}
+		@media (max-width: 700px) {
+			height: calc(100vh - 45px);
+			margin-top: 0;
+			grid-template-columns: 1fr;
+			grid-template-rows: repeat(2, 1fr);
+			max-width: 500px;
+			grid-gap: 0;
+			padding: 0;
+		}
+
+
 		& > .block {
 			width: 100%;
 			position: relative;
+
+			@media (max-width: 700px) {
+				&.square:before {
+					display: none;
+				}
+			}
 
 			.image {
 				background-size: cover;
@@ -48,7 +67,21 @@
 							a {
 								pointer-events: auto;
 								color: white;
+
+								@media (max-width: 1035px) {
+									display: flex;
+									align-items: center;
+									justify-content: center;
+								}
 							}
+						}
+					}
+					@media (max-width: 1035px) {
+						top: 0;
+						bottom: 0;
+
+						* {
+							.absolutely-covered;
 						}
 					}
 				}
@@ -87,10 +120,12 @@
 					background-color: fade(black, 75%);
 
 					.name .outer {
-						transform: translateY(0);
-
-						.inner {
+						@media (min-width: 1035px) {
 							transform: translateY(0);
+
+							.inner {
+								transform: translateY(0);
+							}
 						}
 					}
 					.links .link-list {
@@ -100,64 +135,13 @@
 							opacity: 1;
 							transform: translateY(0);
 						}
+
+						@media (max-width: 1035px) {
+							display: none;
+						}
 					}
 				}
 			}
 		}
 	}
-
-
-	/*position: relative;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	-webkit-user-select: none;
-	height: calc(100vh - 82px - 50px - 50px);
-	z-index: 0;
-
-	.welcome-link {
-		position: relative;
-		overflow: hidden;
-
-		.image {
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-			height: 100%;
-			transition: all 0.8s ease;
-
-			&:before {
-				content: '';
-				position: absolute;
-				.absolutely-covered;
-				background-color: black;
-				opacity: .3;
-				transition: all 0.8s ease;
-			}
-		}
-		&:hover .image {
-			transform: scale(1.03);
-
-			&:before {
-				opacity: .6;
-			}
-		}
-		a {
-			position: absolute;
-			.absolutely-covered;
-			display: block;
-			color: white;
-			font-size: 1.9rem;
-			z-index: 2;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			padding: 0 10px;
-			text-align: center;
-
-			@media (max-width: 620px) {
-				font-size: 1.5rem;
-			}
-		}
-		}*/
-	}
+}
