--- a/resources/less/templates/brands.less
+++ b/resources/less/templates/brands.less
@@ -1,4 +1,102 @@
 #template_brands {
+	& > .container {
+		margin-top: 50px;
+	}
+	
+	.section-title {
+		margin-bottom: 20px;
+		font-size: 1.4rem;
+		letter-spacing: .1rem;
+	}
+
+	.alphabetical-index {
+		.letter-list {
+			display: flex;
+
+			.letter-item {
+				&:not(:last-child) {
+					margin-right: 7px;
+				}
+
+				min-width: 35px;
+
+				.letter {
+					width: 100%;
+					height: 34px;
+					cursor: pointer;
+					background-color: #f1f1f1;
+					color: #7a7a7a;
+					font-weight: 400;
+					font-size: 1.3rem;
+					padding: 0 7px;
+
+					&:hover {
+						color: white;
+						background-color: #7122e3;
+					}
+				}
+			}
+		}
+	}
+	.brands {
+		.brands-section {
+			margin-top: 50px;
+
+			.section-title {
+				margin-bottom: 5px;
+			}
+
+			.brands-grid {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-gap: 20px;
+				border-top: 1px solid #dbdbdb;
+				padding-top: 15px;
+
+				.brand-item {
+					display: flex;
+					align-items: center;
+
+					.image-wrapper {
+						width: 166px;
+						height: 80px;
+						margin-right: 18px;
+						padding: 16px 33px;
+						background-color: #f1f1f1;
+						transition: all .15s ease-in-out;
+
+						.image {
+							width: 100%;
+							height: 100%;
+							background-repeat: no-repeat;
+							background-position: center;
+							background-size: contain;
+							opacity: .5;
+							transition: all .15s ease-in-out;
+						}
+					}
+					.name {
+						color: black;
+						font-size: 1.2rem;
+					}
+
+					&:hover .image-wrapper {
+						background-color: #7122e3;
+
+						.image {
+							opacity: 1;
+							filter: invert(100%);
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+
+
+/*#template_brands {
 	.container {
 		margin-top: 50px;
 
@@ -10,7 +108,6 @@
 		}		
 
 		.brands h2 {
-			
 			margin-top: -50px;
 			margin-bottom: 15px;
 			padding-top: 100px;
@@ -107,4 +204,4 @@
 			
 		}
 	}
-}
+}*/
