--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -16,9 +16,10 @@
 html {
 	font-size: 14px;
 }
-body {
-	//background-color: #f2f2f2;
-	background-color: white;
+h1 {
+	font-weight: 300;
+	font-size: 2rem;
+	text-align: center;
 }
 main {
 	min-height: 50vh;	
