--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -1,12 +1,66 @@
 #section_welcome {
-	& > .container {
+	// position: absolute;
+	// top: 0;
+	// left: 0;
+	// right: 0;
+
+	.slider {
+		.slide {
+			width: 100%;
+			height: 100vh;
+			position: relative;
+			display: flex;
+			align-items: center;
+
+			.overlay {
+				.absolutely-covered;
+				background-color: fade(black, 40%);
+				z-index: 2;
+			}
+			.image {
+				.absolutely-covered;
+				background-position: center;
+				background-size: cover;
+				background-repeat: no-repeat;
+				z-index: 1;
+			}
+			.content {
+				z-index: 3;
+				pointer-events: none;
+
+				.slide-title {
+					font-size: 12rem;
+					text-transform: uppercase;
+					color: white;
+					font-weight: 400;
+					position: relative;
+					left: -11px;
+				}
+				.btn {
+					background-color: white;
+					color: black;
+					font-weight: 400;
+					padding: 15px 35px;
+					pointer-events: auto;
+					margin-top: 25px;
+				}
+			}
+		}
+	}
+
+	
+
+
+
+
+	/* & > .container {
 		margin-top: 30px;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 30px;
 		max-width: 1300px;
-
-
+	
+	
 		@media (max-width: 1160px) {
 			grid-gap: 10px;
 		}
@@ -19,18 +73,18 @@
 			grid-gap: 0;
 			padding: 0;
 		}
-
-
+	
+	
 		& > .block {
 			width: 100%;
 			position: relative;
-
+	
 			@media (max-width: 700px) {
 				&.square:before {
 					display: none;
 				}
 			}
-
+	
 			.image {
 				background-size: cover;
 				background-position: center;
@@ -41,7 +95,7 @@
 				.absolutely-covered;
 				background-color: fade(black, 20%);
 				transition: background-color 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
-
+	
 				.name, .links {
 					.absolutely-covered;
 					display: flex;
@@ -52,22 +106,22 @@
 				.name {
 					z-index: 3;
 					pointer-events: none;
-
+	
 					.outer {
 						text-transform: uppercase;
 						font-size: 3.5rem;
 						transform: translateY(50%);
 						transition: transform 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
 						letter-spacing: .1rem;
-
+	
 						.inner {
 							transition: inherit;
 							transform: translateY(-50%);
-
+	
 							a {
 								pointer-events: auto;
 								color: white;
-
+	
 								@media (max-width: 1035px) {
 									display: flex;
 									align-items: center;
@@ -79,7 +133,7 @@
 					@media (max-width: 1035px) {
 						top: 0;
 						bottom: 0;
-
+	
 						* {
 							.absolutely-covered;
 						}
@@ -88,24 +142,24 @@
 				.links {
 					z-index: 2;
 					align-items: center;
-
+	
 					.link-list {
 						min-width: 300px;
 						opacity: 0;
 						transition: opacity .2s ease-in-out;
-
+	
 						.link-item {
 							transform: translateX(-15px);
 							opacity: 0;
 							transition: opacity .2s ease-in-out, transform .25s ease-in-out;
-
+	
 							&:not(:last-child) {
 								margin-bottom: 20px;
 							}
 							a {
 								color: white;
 								font-size: 2rem;
-
+	
 								&:hover {
 									text-decoration: underline;
 								}
@@ -114,15 +168,15 @@
 					}
 				}
 			}
-
+	
 			&:hover {
 				.text-wrapper {
 					background-color: fade(black, 75%);
-
+	
 					.name .outer {
 						@media (min-width: 1035px) {
 							transform: translateY(0);
-
+	
 							.inner {
 								transform: translateY(0);
 							}
@@ -130,12 +184,12 @@
 					}
 					.links .link-list {
 						opacity: 1;
-
+	
 						.link-item {
 							opacity: 1;
 							transform: translateY(0);
 						}
-
+	
 						@media (max-width: 1035px) {
 							display: none;
 						}
@@ -143,5 +197,5 @@
 				}
 			}
 		}
+		} */
 	}
-}
