Changes in legal.refund section

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -15,6 +15,7 @@
 @import "sections/collections.less";
 @import "sections/search.less";
 @import "sections/cart.less";
+@import "sections/legal.refund.less";
 
 
 @import "templates/home.less";
