--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -1,22 +1,14 @@
 #section_welcome {
-	// position: absolute;
-	// top: 0;
-	// left: 0;
-	// right: 0;
+	position: relative;
 
 	.slider {
 		.slide {
 			width: 100%;
 			height: 100vh;
 			position: relative;
-			display: flex;
+			display: flex !important;
 			align-items: center;
 
-			.overlay {
-				.absolutely-covered;
-				background-color: fade(black, 40%);
-				z-index: 2;
-			}
 			.image {
 				.absolutely-covered;
 				background-position: center;
@@ -24,17 +16,21 @@
 				background-repeat: no-repeat;
 				z-index: 1;
 			}
+			.overlay {
+				.absolutely-covered;
+				background-color: fade(black, 40%);
+				z-index: 2;
+			}
 			.content {
 				z-index: 3;
 				pointer-events: none;
+				position: relative;
 
 				.slide-title {
 					font-size: 12rem;
 					text-transform: uppercase;
 					color: white;
 					font-weight: 400;
-					position: relative;
-					left: -11px;
 				}
 				.btn {
 					background-color: white;
@@ -47,155 +43,44 @@
 			}
 		}
 	}
+	.slider-navigation-wrapper {
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 10vh;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
-	
+		.slider-dots {
+			.slick-dots {
+				display: flex;
 
+				li {
+					button {
+						font-size: 0;
+						width: 20px;
+						height: 20px;
+						background-color: white;
+						opacity: .35;
+						border-radius: 9999px;
+						backdrop-filter: blur(20px);
+						cursor: pointer;
+						transition: opacity .15s ease-in-out;
 
-
-
-	/* & > .container {
-		margin-top: 30px;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-gap: 30px;
-		max-width: 1300px;
-	
-	
-		@media (max-width: 1160px) {
-			grid-gap: 10px;
+						&:hover {
+							opacity: .5;
+						}
+					}
+					&.slick-active button {
+						opacity: .8;
+					}
+					&:not(:last-child) {
+						margin-right: 10px;
+					}
+				}
+			}
+			
 		}
-		@media (max-width: 700px) {
-			height: calc(100vh - 45px);
-			margin-top: 0;
-			grid-template-columns: 1fr;
-			grid-template-rows: repeat(2, 1fr);
-			max-width: 500px;
-			grid-gap: 0;
-			padding: 0;
-		}
-	
-	
-		& > .block {
-			width: 100%;
-			position: relative;
-	
-			@media (max-width: 700px) {
-				&.square:before {
-					display: none;
-				}
-			}
-	
-			.image {
-				background-size: cover;
-				background-position: center;
-				background-repeat: no-repeat;
-				height: 100%;
-			}
-			.text-wrapper {
-				.absolutely-covered;
-				background-color: fade(black, 20%);
-				transition: background-color 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
-	
-				.name, .links {
-					.absolutely-covered;
-					display: flex;
-					justify-content: center;
-					top: 50px;
-					bottom: 50px;
-				}
-				.name {
-					z-index: 3;
-					pointer-events: none;
-	
-					.outer {
-						text-transform: uppercase;
-						font-size: 3.5rem;
-						transform: translateY(50%);
-						transition: transform 0.35s cubic-bezier(0.46, 0.01, 0.32, 1);
-						letter-spacing: .1rem;
-	
-						.inner {
-							transition: inherit;
-							transform: translateY(-50%);
-	
-							a {
-								pointer-events: auto;
-								color: white;
-	
-								@media (max-width: 1035px) {
-									display: flex;
-									align-items: center;
-									justify-content: center;
-								}
-							}
-						}
-					}
-					@media (max-width: 1035px) {
-						top: 0;
-						bottom: 0;
-	
-						* {
-							.absolutely-covered;
-						}
-					}
-				}
-				.links {
-					z-index: 2;
-					align-items: center;
-	
-					.link-list {
-						min-width: 300px;
-						opacity: 0;
-						transition: opacity .2s ease-in-out;
-	
-						.link-item {
-							transform: translateX(-15px);
-							opacity: 0;
-							transition: opacity .2s ease-in-out, transform .25s ease-in-out;
-	
-							&:not(:last-child) {
-								margin-bottom: 20px;
-							}
-							a {
-								color: white;
-								font-size: 2rem;
-	
-								&:hover {
-									text-decoration: underline;
-								}
-							}
-						}
-					}
-				}
-			}
-	
-			&:hover {
-				.text-wrapper {
-					background-color: fade(black, 75%);
-	
-					.name .outer {
-						@media (min-width: 1035px) {
-							transform: translateY(0);
-	
-							.inner {
-								transform: translateY(0);
-							}
-						}
-					}
-					.links .link-list {
-						opacity: 1;
-	
-						.link-item {
-							opacity: 1;
-							transform: translateY(0);
-						}
-	
-						@media (max-width: 1035px) {
-							display: none;
-						}
-					}
-				}
-			}
-		}
-		} */
 	}
+}
