--- a/resources/less/sections/header.less
+++ b/resources/less/sections/header.less
@@ -6,8 +6,7 @@
 }
 
 #section_header {
-	background-color: fade(white, 95%);
-	backdrop-filter: blur(20px);
+	background-color: white;
 	position: sticky;
 	top: calc(50px - @header_height);
 	transition:
@@ -17,7 +16,6 @@
 		border-bottom .15s ease-in-out;
 	z-index: 100;
 	pointer-events: auto;
-	border-bottom: 1px solid #f2f2f2;
 
 	@import "../snippets/header.desktop.less";
 	@import "../snippets/header.mobile.less";
