--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -80,7 +80,33 @@
 					}
 				}
 			}
-			
+		}
+		.slider-arrows {
+			display: flex;
+
+			button {
+				width: 50px;
+				height: 50px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				border-radius: 9999px;
+				cursor: pointer;
+				transition: opacity .15s ease-in-out;
+
+				svg {
+					width: 15px;
+					height: 15px;
+					fill: #727272;
+				}
+
+				&:not(:last-child) {
+					margin-right: 10px;
+				}
+				&:hover {
+					opacity: .7;
+				}
+			}
 		}
 	}
 }
