--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -5,7 +5,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border-bottom: 1px solid #e0e0e0;
+		border-bottom: 1px solid #f2f2f2;
 		padding: 11px 0;
 
 		.breadcrumb {
