--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -1,3 +1,5 @@
+@main-color: #7122e3;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -18,6 +20,16 @@ html {
 }
 .chatCopyright_3s, .copy_2W {
 	display: none !important;
+}
+.leaf_25 {
+	height: 35px !important;
+}
+.main_Lb {
+	overflow: hidden;
+}
+.cssLeaf_1k {
+	background-image: none !important;
+	background-color: #7122e3;
 }
 body {
 	position: relative;
