Fucking filters aargh >_<

--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -18,6 +18,9 @@
 html {
 	font-size: 14px;
 }
+.datatag {
+	display: none !important;
+}
 .chatCopyright_3s, .copy_2W {
 	display: none !important;
 }
