Pagination in collection page

--- a/resources/less/snippets/catalog.collection.filters.less
+++ b/resources/less/snippets/catalog.collection.filters.less
@@ -26,6 +26,9 @@
 				grid-template-columns: repeat(2, 1fr);
 			}
 			&.price {
+				.form-control[type="number"] {
+					font-size: 1rem;
+				}
 				.noUi-target {
 					height: 8px;
 					background: #e1e1e1;
