--- a/resources/less/snippets/catalog.product.pricing.less
+++ b/resources/less/snippets/catalog.product.pricing.less
@@ -15,9 +15,17 @@
 		font-weight: 500;
 		color: black;
 	}
-	.compare-at-price {
-		font-weight: 500;
+	.compare-at-price ~ .price {
 		margin-left: 20px;
+		background-color: @main-color;
+		color: white;
+		padding: 5px 10px;
+		border-radius: 4px;
+		font-size: 1.7rem;
+	}
+	.compare-at-price {
+		font-size: 1.7rem;
+		font-weight: 500;
 		color: #949597;
 		position: relative;
 		text-decoration: line-through;
