--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -201,7 +201,7 @@
 			width: 100%;
 			padding: 40px 0;
 			margin: 0 auto;
-			border-top: 1px solid #ededed;
+			// border-top: 1px solid #ededed;
 
 			& > * {
 				width: 100%;
