--- a/resources/less/snippets/catalog.collection.filters.less
+++ b/resources/less/snippets/catalog.collection.filters.less
@@ -7,12 +7,17 @@
 	}
 
 	.filters-section {
+		.has-scroll-append {
+			background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.972549));
+		}
+		.has-scroll-prepend {
+			background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.972549));
+		}
 		&:not(:first-child) {
 			margin-top: 20px;
 			padding-top: 10px;
 			border-top: 1px solid #e0e0e0;
 		}
-
 		.section-title {
 			font-weight: 500;
 			font-size: 1.2rem;
