--- a/resources/less/templates/brands.less
+++ b/resources/less/templates/brands.less
@@ -10,15 +10,18 @@
 	}
 
 	.alphabetical-index {
+		margin-top: 30px;
+		
 		.letter-list {
 			display: flex;
+			justify-content: center;
 
 			.letter-item {
+				min-width: 35px;
+
 				&:not(:last-child) {
 					margin-right: 7px;
 				}
-
-				min-width: 35px;
 
 				.letter {
 					width: 100%;
