--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -27,22 +27,23 @@
 
 			.sort {
 				font-weight: 400;
-				font-size: 1.2rem;
+				font-size: 1.1rem;
 				display: flex;
 				align-items: center;
 
 				a {
 					font-weight: 300;
-					color: #8f8f8f;
+					color: #4a4a4a;
 					text-transform: lowercase;
 					padding: 0 8px;
 					height: 30px;
-					line-height: 27px;
+					display: flex;
+					align-items: center;
 					border-radius: 4px;
 					margin-left: 12px;
 
 					&.active {
-						background-color: #a7a7a7;
+						background-color: #878787;
 						color: white;
 					}
 				}
@@ -77,7 +78,7 @@
 
 		.pagination {
 			display: flex;
-			justify-content: flex-end;
+			justify-content: center;
 
 			.page-item {
 				height: max-content;
