--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -52,6 +52,16 @@
 		
 	}
 
+	.preloader-wrapper {
+		padding: 50px 0;
+
+		.preloader {
+			width: 100px;
+			height: 100px;
+			margin: 0 auto;
+		}
+	}
+
 	.main-content {
 		display: grid;
 		grid-template-columns: 240px 1fr;
